<resources>
    <string name="app_name">SpyroTheDragon</string>
    <string name="worlds">Mundos</string>
    <string name="characters">Personajes</string>
    <string name="collectibles">Coleccionables</string>
    <string name="title_about">Acerca de</string>
    <string name="text_about">Aplicación desarrollada por \n <b>Miguel José Ruiz Rodríguez</b></string>
    <string name="accept">Aceptar</string>

    <!-- Guide Strings -->
    <string name="guide_welcome_title">¡Bienvenido a Spyro the Dragon!</string>
    <string name="guide_welcome_description">Preparate para explorar el fascinante mundo de Spyro the Dragon. Embárcate en una aventura mágica a través de los Reinos del Dragón. Aquí aprenderas a navegar por las diversas pestañas de la aplicación.¿Estas listo? ¡Pulsa Comenzar!.</string>
    <string name="guide_button_start">Comenzar</string>
    <string name="guide_characters_description">Aquí podrás explorar a todos los personajes del mundo de Spyro.</string>
    <string name="guide_button_next">Siguiente</string>
    <string name="guide_worlds_description">Descubre los mundos increíbles que Spyro debe explorar y liberar.</string>
    <string name="guide_collectibles_description">¡No olvides recoger todas las gemas y objetos mágicos en tu camino!</string>
    <string name="guide_info_description">Si quieres saber quien hizo la aplicacion y más info sobre ella, consulta aquí.</string>
    <string name="guide_button_finish">Siguiente</string>
    <string name="guide_summary_title">¡Guía completada!</string>
    <string name="guide_summary_description">Ya le has dado un vistazo a:</string>
    <string name="guide_summary_step1">✓ Personajes</string>
    <string name="guide_summary_step2">✓ Mundos</string>
    <string name="guide_summary_step3">✓ Coleccionables</string>
    <string name="guide_summary_step4">✓ Información</string>
    <string name="guide_button_ready">¡Fin de  la guía! ¡Disfruta de Spyro!</string>
    <string name="guide_button_skip">Saltar guía</string>
</resources>